Fixed several accessibility fixes
Fixed identical id names in footer for each file
Ensured links have unique descriptions
Added ARIA descriptions where needed
Added accessible names to IFrames

--- a/lrt.html
+++ b/lrt.html
@@ -289,16 +289,16 @@
                         </nav>
                     </div>
                     <div class="col">
-                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container-1">
                             <ul class="menu">
                                 <li class="menu-item"><a href="https://www.fsa.usda.gov/help/accessibility-statement/index" aria-label="Go to FSA Accessibility Statement">Accessibility Statement</a></li>
                                 <li class="menu-item"><a href="http://ask.usda.gov/s/" aria-label="Go to Ask USDA">Common Questions</a></li>
-                                <li class="menu-item"><a href="https://www.fsa.usda.gov/news-room/efoia/index" aria-label="Go to USDA.gov">Freedom of Information Act</a></li>
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/news-room/efoia/index" aria-label="Go to efoia index">Freedom of Information Act</a></li>
                             </ul>
                         </nav>
                     </div>
                     <div class="col">
-                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container-2">
                             <ul class="menu">
                                 <li class="menu-item"><a href="https://www.fsa.usda.gov/programs-and-services/farm-service-agency-no-fear-act-report-information/index">No FEAR Report</a></li>
                                 <li class="menu-item"><a href="https://www.ocio.usda.gov/policy-directives-records-forms/information-quality-activities">Information Quality</a></li>
@@ -307,7 +307,7 @@
                         </nav>
                     </div>                   
                     <div class="col">
-                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container-3">
                             <ul class="menu">
                                 <li class="menu-item"><a href="https://www.fsa.usda.gov/help/policies-and-links/index">Policies and Links</a></li>
                                 <li class="menu-item"><a href="https://www.fsa.usda.gov/help/privacy-policy/index">Privacy Policy</a></li>
