--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 </head>
 
 <body>
-
     <!-- ======= Header ======= -->
-
     <header class="main-header" role="banner" aria-label="Page Header">
         <!--wrapper for main header used to hide on print-->
         <div class="head-main">
@@ -228,48 +226,38 @@
             </div>
         </div>
     </header>
-
-
     <!-- End Header -->
 
-
-
     <main id="main-content" class="backgroundHero">
-
-    <div class="homecard"> 
-        <div class="container">
-
-            <div class="row">
-                <div class="primary-region medium-12">
-                    <h1 class="primary-region__title">
-                        Loan Assistance Tool
-                    </h1>
+        <div class="homecard"> 
+            <div class="container">
+                <div class="row">
+                    <div class="primary-region medium-12">
+                        <h1 class="primary-region__title">
+                            Loan Assistance Tool
+                        </h1>
+                    </div>
                 </div>
-            </div>
-
-            <div class="row ">
-                <div class="col-md-12">
-                    <div class="content-card accent-top">
-                        <h3 class="card-title">Are you ready to apply for a farm loan?</h3>
-                        <div class="card-body">
-                            <ul>
-                                <li>Am I eligible for a FSA Farm Loan?</li>
-                                <li>Which loans are right for me?</li>
-                                <li>Where can I get  help completing the loan application forms?</li>
-                            </ul>
+                <div class="row ">
+                    <div class="col-md-12">
+                        <div class="content-card accent-top">
+                            <h3 class="card-title">Are you ready to apply for a farm loan?</h3>
+                            <div class="card-body">
+                                <ul>
+                                    <li>Am I eligible for a FSA Farm Loan?</li>
+                                    <li>Which loans are right for me?</li>
+                                    <li>Where can I get  help completing the loan application forms?</li>
+                                </ul>
+                            </div>
+                            <button class="btn lg-btn" onclick="window.location.assign('/lrt.html')">
+                                Get Started
+                            </button>
                         </div>
-                        <button class="btn lg-btn" onclick="window.location.assign('/lrt.html')">
-                            Get Started
-                        </button>
                     </div>
                 </div>
             </div>
-
-        </div>
-
-    </div>  
- 
-    <div class="spacer">&nbsp;</div>
+        </div>  
+        <div class="spacer">&nbsp;</div>
     </main>
 
     <!-- ======= Footer ======= -->
@@ -400,24 +388,27 @@
     </footer>
     <!-- End Footer -->
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.2.228/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/farmers.min.js"></script>
-
+    
+    <!-- manage state -->
+    <script src="js/stateManager.js"></script>
 
     <script>
         (function() {
-            // Load first page
-            // showPDF('loan making-overview-graphic.pdf');
-            // setupMenu();
+            //deleteCookies();
+            console.log(userState());
 
-
+            /*  NOTE:  This is old code
+                Load first page
+                showPDF('loan making-overview-graphic.pdf');
+                setupMenu();
+            */
         })();
+        
     </script>
-
 </body>
 
 </html>
