First pass full functionality of new forms page
Forms support shows cards with images.  Click button to load loan specific forms.  Click for to go to pdf viewer.

--- a/index.html
+++ b/index.html
@@ -398,14 +398,8 @@
 
     <script>
         (function() {
-            //deleteCookies();
-            console.log(userState());
-
-            /*  NOTE:  This is old code
-                Load first page
-                showPDF('loan making-overview-graphic.pdf');
-                setupMenu();
-            */
+            // deleteCookies();
+            // console.log(userState());
         })();
         
     </script>
