--- a/walkthrough.html
+++ b/walkthrough.html
@@ -608,7 +608,7 @@
                         var new_card = `<div class="col">
                                             <div class="loantype-card-container content-card accent-top form-card h-100">
                                                 <div class="loantype-card-image-container">
-                                                    <img class="loantype-card-image-container" src="./images/loantypes/${type["imageName"]}" alt="${type["imageAltText"]}">
+                                                    <img class="loantype-card-image-container" src="./images/loantypes/${type["image"]}" alt="${type["imageAltText"]}">
                                                 </div>
                                                 <div class="loantype-card-title headline">
                                                     <h3> ${type["name"]} </h3>
