updating style and added links back
Added back arrows to loan type forms page
Started transferring to Stesha's design style

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
     <script>
         (function() {
-            // deleteCookies();
+             deleteCookies();
             // console.log(userState());
         })();
         
