fix loan discovery

--- a/lrt.html
+++ b/lrt.html
@@ -432,9 +432,14 @@
                 
                 if(location.search=="?discovery"){
                     document.getElementById("loanEligibility").classList.remove("mm-active");
-                    document.getElementById("loanDiscovery").classList.add("mm-active");
+                    document.getElementById("loanDiscovery").classList.add("mm-active");  
+
                     $.each(answeredQuestions, function(key, item) {
+                        let value = Math.max(...answeredQuestions);
+                        console.log(value);
+
                         let id = parseInt(item);
+                        if(value < 36) { id = 36; }
                         WizardBuilder.addStep("lrt-stepper", id);
                         WizardBuilder.goToStep("lrt-stepper", id);
                     })
