--- a/walkthrough.html
+++ b/walkthrough.html
@@ -508,6 +508,7 @@
                                             </div>
                                         </div>
                                     </div>`;
+
                     document.getElementById('title-holder').innerHTML = titleText;
                     // Description of support page
                     var descriptioText =    `<div class="col"> ${data['LoanType'][index]['description']} </div>`;
@@ -534,8 +535,8 @@
                         }
                         
                         var new_card =  `<div class="col">
-                                            <div class="content-card accent-top form-card h-100">
-                                                <div class="headline">
+                                            <div class="loantype-card-container">
+                                                <div class="loantype-card-title">
                                                     <h3><a class="text-link" href="/form.html?key=${key}&show_forms=${form_ids}">${form.name}</a></h3>
                                                 </div>
                                                 <div class="content">
@@ -630,7 +631,7 @@
                                                     <p> ${type["description"]} </p>
                                                 </div>
                                                 <div class="loantype-card-spacer">
-                                                    <p>  </p>
+                                                    <p></p>
                                                 </div> 
                                                 <div class="loantype-card-button-container">
                                                     <div class="loantype-card-button">
