Removed  console log  calls
Removed  console log  calls

--- a/walkthroughBU.html
+++ b/walkthroughBU.html
@@ -439,8 +439,8 @@
 
     <script>
         (function() {
-            console.log(userState());
-            console.log(getCookie("steps"));
+            // console.log(userState());
+            // console.log(getCookie("steps"));
 
             // Show Forms Grid
             $.getJSON("/forms/forms.json", function(data) {
