--- a/walkthrough.html
+++ b/walkthrough.html
@@ -535,8 +535,8 @@
                         }
                         
                         var new_card =  `<div class="col">
-                                            <div class="loantype-card-container">
-                                                <div class="loantype-card-title">
+                                            <div class="content-card accent-top form-card h-100"">
+                                                <div class="headline">
                                                     <h3><a class="text-link" href="/form.html?key=${key}&show_forms=${form_ids}">${form.name}</a></h3>
                                                 </div>
                                                 <div class="content">
