Adding dev tools and answer tracking
Added question and answer pairing and added some debug tools to view and reset cookies

--- a/guides.html
+++ b/guides.html
@@ -470,6 +470,11 @@
                 //     desc = show_anchor.attr("data-desc"),
                 // );
             });
+            
+            // Debug stuff
+            $(document).keyup(function(e){
+                debugTools(location.hostname, e);
+            });
         })();
     </script>
 
