--- a/form.html
+++ b/form.html
@@ -515,6 +515,11 @@
                     });                    
                 });               
             });
+
+            // Debug stuff
+            $(document).keyup(function(e){
+                debugTools(location.hostname, e);
+            });
         })();
     </script>
 </body>
