--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <link href="images/favicons/favicon.png" rel="apple-touch-icon">
 
     <!-- CSS Files -->
-    <link rel="stylesheet" media="all" href="css/styles.min.css" />
+    <link rel="stylesheet" media="all" href="css/styles.min.css"  media="all"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="css/walkthrough.css" rel="stylesheet">
+    <link href="css/walkthrough.css" rel="stylesheet" media="all">
+    <link href="./css/stepper.css" rel="stylesheet" media="all"/>
+    <link href="./css/lrt.css" rel="stylesheet" media="all"/>
+    <link href="css/newHome.css" rel="stylesheet" media="all"/>
 </head>
 
 <body>
@@ -42,10 +45,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/farmers.min.js"></script>
     
-    <!-- manage state -->
-    <script src="js/stateManager.js"></script>
+    <!-- add GSAP library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
+    <!-- add GSAP ScrollTo Plugin-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/ScrollToPlugin.min.js"></script>
 
-    <script src="js/farmers.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
+    <script src="https://code.getmdl.io/1.2.1/material.js" type="text/javascript"></script>
+    <script src="../js/wizardBuilder.js" type="text/javascript"></script>
+    <script src="../js/stepper.min.js" type="text/javascript"></script>
+
+    <!-- manage state -->
+    <script src="./js/stateManager.js"></script>
 
     <script>
         // Initialize page
