--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="https://code.getmdl.io/1.2.1/material.js" type="text/javascript"></script>
-    <script src="../js/wizardBuilder.js" type="text/javascript"></script>
     <script src="../js/stepper.min.js" type="text/javascript"></script>
 
     <!-- manage state -->
@@ -89,19 +88,21 @@
 
             // set link highlight
             $(document).ready(function () {
-                highlightLink(pageName);
-            })
+                gsap.registerPlugin(ScrollToPlugin);
+            });
         })();
-
-
 
         // Called from onClick in header.html links
         function setContent(pageName) {
             // loads component based on passed in name 
+            $("#main-content").empty();
             $("#main-content").load("/components/" + pageName + ".html");
             // Save current page so refresh can show th ecurrent page
             setCurrentPage(pageName);
-            highlightLink(pageName);
+            
+            $(document).ready(function () {
+                highlightLink(pageName);
+            });
         };
 
         function highlightLink(pageName) {
@@ -110,7 +111,7 @@
                 // return if element doesn' exist
                 if(document.getElementById(getPageList()[key]) === null) { return; }
 
-                if(getPageList()[key] === pageName || getPageList()[key] === 'form') {
+                if(getPageList()[key] === pageName) {
                     document.getElementById(getPageList()[key]).className = "active-trail page-link mm-active";
                 }
                 else {
