--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta ver="1.0.5+">
+    <meta ver="1.1.0">
 
 
     <title>Loan Assistance Tool / Home </title>
