--- a/walkthrough.html
+++ b/walkthrough.html
@@ -246,17 +246,26 @@
                     <div class="primary-region__header">
                         <div  id="header-holder"> </div>
                         <p>
-                            Below are the forms used to apply for for an annual operating farm loan. You may needs to fill many of them to complete your application. Please select a form to start the walk tough process. You may comeplete the form as you go though this process. You may download the each form to your computers at any point to save your progress and resume working on it later. Please note:
+                            Using the Form Support module, you can walk through each FSA form field by field and get instructions on how to complete it. To begin the form walkthrough process, please select one of the below forms. 
+                        </p>
+                        <p>
+                            Forms can be filled out online and downloaded to a local machine for printing. However, please note:
                         </p>
                         <ul>
-                            <li>The forms can only be saved to your computer;</li>
-                            <li>At no point in this process is any information saved to, or shared with USDA staff or systems; and</li>
-                            <li>You care encouraged to reach out to your Local Service Center if you have any further questions or concerns.</li>
+                            <li>It is not possible to save your work online. Currently, you are only able to save forms by downloading them to your local machine as PDFs;
+                            </li>
+                            <li>This process does not save or submit any information online; and
+                            </li>
+                            <li>Completed applications must be printed out and sent to your <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&amp;agency=fsa" target="_blank">Local Service Center</a> if you have any further questions or concerns.
+                            </li>
                         </ul>
+                        <p>
+                            Any further questions or concerns should be directed to your  <a href="https://offices.sc.egov.usda.gov/locator/app?state=us&amp;agency=fsa" target="_blank">Local Service Center</a>.
+                        </p>
                         <p id="return-form-suport">
-                            
                         </p>
 
+                        
                         <!-- Yellow warning --> 
                         <div class="warning-container">
                             <div class="warning-left-bar"> </div>
@@ -278,10 +287,10 @@
                             </div>
                             <div class="info-message">
                                 <div class="info-message-title">
-                                    Eligibility assesssment available
+                                    Complete the self-assessment.
                                 </div>
                                 <div class="info-message-description">
-                                    Not sure where to start? Complete the eligibility assessment to understand which loan application best suits your needs.
+                                    Not sure where to start? Complete the self-assessment to learn whether you meet the basic eligibility criteria for FSA loans and to discover which loans are right for you.
                                 </div>
                                     <button class="btn lg-btn info-button-container" onclick="window.location.assign('/lrt.html')" aria-label="Go to the Loan Readiness Tool">
                                         Start Eligibility Self-Assessment
