--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 pageName = 'home';
             }
 
-            setContent('quiz');
+            pageName = 'quiz'
+            setContent(pageName);
             
             // Load from html component footer.html
             $('#main-footer').load("/components/footer.html");
@@ -106,7 +107,6 @@
         };
 
         function highlightLink(pageName) {
-
             $.each(getPageList(), function(key) {
                 // return if element doesn' exist
                 if(document.getElementById(getPageList()[key]) === null) { return; }
