Updated header and home page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 pageName = 'home';
             }
 
-            pageName = 'quiz'
+            // pageName = 'quiz'
             setContent(pageName);
             
             // Load from html component footer.html
