--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- ======= Header ======= -->
-    <header class="main-header" role="banner" aria-label="Page Header" id="header">
+    <header role="banner" aria-label="Page Header" id="header">
         <!-- loaded in script see below: $("#main-header").load("/components/landingpage.html") -->
     </header>
     <!-- End Header -->
@@ -122,8 +122,8 @@
         }
     </script>
 
-    <!--BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
-    <!-- <script type='text/javascript'>
+    <!-- BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
+    <script type='text/javascript'>
         (function(){var g=function(e,h,f,g){
         this.get=function(a){for(var a=a+"=",c=document.cookie.split(";"),b=0,e=c.length;b<e;b++){for(var d=c[b];" "==d.charAt(0);)d=d.substring(1,d.length);if(0==d.indexOf(a))return d.substring(a.length,d.length)}return null};
         this.set=function(a,c){var b="",b=new Date;b.setTime(b.getTime()+6048E5);b="; expires="+b.toGMTString();document.cookie=a+"="+c+b+"; path=/; "};
