Fixed farmers header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="images/favicons/favicon.png" rel="apple-touch-icon">
 
     <!-- CSS Files -->
-    <!-- <link rel="stylesheet" media="all" href="css/styles.min.css"  media="all"/> -->
+    <link rel="stylesheet" media="all" href="css/styles.min.css"  media="all"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="css/walkthrough.css" rel="stylesheet" media="all">
 </head>
