--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="https://code.getmdl.io/1.2.1/material.js" type="text/javascript"></script>
+    <script src="js/moz_viewer_controller.js"></script>
 
     <!-- manage state -->
     <script src="./js/stateManager.js"></script>
