--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <!-- End Header -->
 
-    <main id="main-content">
+    <main id="main-content" style="padding-top: 0px;">
         <!-- loaded context ually through script see below -->
     </main>
 
